# langchain-official-guides

./: AGENTS.md  README.md  langchain-ollama.py  quickstart.py
.opencode/: opencode.json
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out.opencode/: .graphify_detect.json
graphify-out/cache/: stat-index.json
langchain/: langchain-ollama-init-chat-model.py  langchain-ollama.py  pyproject.toml  quickstart-advanced.py  quickstart.ipynb  quickstart.py
langchain-deepagents/: .gitignore  main.py  pyproject.toml  quickstart.py
