[project]
name = "langchain-deepagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.11",
    "langchain-google-genai>=4.2.5",
    "langchain-openrouter>=0.2.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
