[project]
name = "langchain-official"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.11",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "python-dotenv>=1.2.2",
]
